@@ -1,5 +1,5 @@
 export(Xtab, Mefa)
-exportClasses(Xtab, Mefa, stcs, mefa, MefaMatrix, MefaDataFrame)
+exportClasses(Mefa, stcs, mefa, MefaMatrix, MefaDataFrame)
 exportMethods(xtab, samp, taxa, dim, dimnames, "dimnames<-",
     "xtab<-", "samp<-", "taxa<-", "[",
     groupSums, groupMeans,
